# rsomics-bed-to-gff

./: Cargo.toml  README.md
benches/: bed_to_gff.rs  bench.rs
src/: cli.rs  lib.rs
tests/: compat.rs
tests/golden/: intervals.bed  intervals.upstream.expected
