[package]
name = "rsomics-bed-to-gff"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
description = "Convert BED intervals to GFF3 format"
repository = "https://github.com/omics-rust/rsomics-bed-to-gff"
readme = "README.md"
authors = ["Zane Leong <efd@live.com>"]
categories = ["science", "command-line-utilities"]
keywords = ["bed", "gff", "bioinformatics", "bedtools", "genomics"]

[[bin]]
name = "rsomics-bed-to-gff"
path = "src/main.rs"

[lib]
name = "rsomics_bed_to_gff"
path = "src/lib.rs"
doctest = false

[dependencies]
rsomics-common = { version = "0.6" }
rsomics-help = { version = "0.3" }
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "bed_to_gff"
harness = false
